--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "pythonic-fp.circulararray>=5.1.0, <5.2",
-  "pythonic-fp.containers >=2.0.0, <2.1",
+  "pythonic-fp.circulararray>=5.1.0",
+  "pythonic-fp.containers >=2.0.0",
 ]
 dynamic = ["description"]
 
@@ -39,8 +39,8 @@ Source = "https://github.com/grscheller/pythonic-fp-fptools"
 [project.optional-dependencies]
 test = [
   "pytest >=8.3.5",
-  "pythonic-fp.iterables >=3.0.0, <3.1",
-  "pythonic-fp.queues >=3.0.0, <3.1",
+  "pythonic-fp.iterables >=3.0.0",
+  "pythonic-fp.queues >=3.0.0",
 ]
 
 [build-system]
