--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,15 +36,8 @@ Documentation = "https://grscheller.github.io/pythonic-fp/maintained/fptools"
 Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.rst"
 Source = "https://github.com/grscheller/pythonic-fp-fptools"
 
-[project.optional-dependencies]
-test = [
-  "pytest >=8.3.5",
-  "pythonic-fp.iterables >=3.0.0",
-  "pythonic-fp.queues >=3.0.0",
-]
-
 [build-system]
-requires = ["flit_core>=3.4,<4"]
+requires = ["flit_core>=3.12,<4"]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.sdist]
@@ -63,8 +56,6 @@ python_path = [
   "/home/grs/devel/pypi/fptools/pythonic-fp-fptools/src",
   "/home/grs/devel/pypi/fptools/pythonic-fp-circulararray/src",
   "/home/grs/devel/pypi/fptools/pythonic-fp-containers/src",
-  "/home/grs/devel/pypi/fptools/pythonic-fp-iterables/src",
-  "/home/grs/devel/pypi/fptools/pythonic-fp-queues/src",
 ]
 
 [tool.pylsp-mypy]
@@ -72,9 +63,12 @@ enabled = true
 live-mode = true
 strict = true
 report_progress = true
+exclude = ["tests/.*"]
 
 [tool.pytest.ini_options]
 consider_namespace_packages = true
+testpaths = ["tests"]
+addopts = "-ra"
 
 [tool.ruff]
 target-version = "py313"
