Updated all pythonic-fp pyproject.toml files
- added test dependencies back
- verified dependencies and test dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,15 @@ classifiers = [
 ]
 dependencies = [
   "pythonic-fp.circulararray>=5.3.0",
+  "pythonic-fp.singletons>=1.0.0",
 ]
 dynamic = ["description"]
+
+[project.optional-dependencies]
+test = [
+  "pytest>=8.4.1",
+  "pythonic-fp.containers>=3.0.0",
+]
 
 [project.urls]
 Changelog = "https://github.com/grscheller/pythonic-fp-fptools/blob/main/CHANGELOG.rst"
@@ -38,9 +45,6 @@ Source = "https://github.com/grscheller/pythonic-fp-fptools"
 [build-system]
 requires = ["flit_core>=3.12,<4"]
 build-backend = "flit_core.buildapi"
-
-[tool.flit.sdist]
-exclude = ["dist", "tests", ".gitignore", ".mypy_cache", ".pytest_cache"]
 
 [tool.mypy]
 enable_incomplete_feature = ["NewGenericSyntax"]
