--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["flit_core>=3.12,<4"]
+build-backend = "flit_core.buildapi"
+
 [project]
-name = "pythonic-fp.fptools"
+name = "pythonic-fp-fptools"
 version = "5.0.0"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -41,10 +45,6 @@ Changelog = "https://github.com/grscheller/pythonic-fp-fptools/blob/main/CHANGEL
 Documentation = "https://grscheller.github.io/pythonic-fp/fptools/API/development/build/html/releases.html"
 Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.md"
 Source = "https://github.com/grscheller/pythonic-fp-fptools"
-
-[build-system]
-requires = ["flit_core>=3.12,<4"]
-build-backend = "flit_core.buildapi"
 
 [tool.mypy]
 enable_incomplete_feature = ["NewGenericSyntax"]
