Preparing pyproject.toml for next pythonic-fp group release.
- PyPI repo name change
- be explicit with flit about submodule which being packaged

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,12 @@ test = [
 
 [project.urls]
 Changelog = "https://github.com/grscheller/pythonic-fp-fptools/blob/main/CHANGELOG.rst"
-Documentation = "https://grscheller.github.io/pythonic-fp/fptools/API/development/build/html/releases.html"
+Documentation = "https://grscheller.github.io/pythonic-fp/fptools/development/build/html/releases.html"
 Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.md"
 Source = "https://github.com/grscheller/pythonic-fp-fptools"
+
+[tool.flit.module]
+name = "pythonic_fp.fptools"
 
 [tool.mypy]
 enable_incomplete_feature = ["NewGenericSyntax"]
@@ -67,9 +70,7 @@ addopts = "-ra"
 
 [tool.ruff]
 target-version = "py313"
-
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
+ignore = ["E741"]
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
