--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,15 +29,15 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "pythonic-fp.circulararray>=5.3.0",
-  "pythonic-fp.singletons>=1.0.0",
+  "pythonic-fp-circulararray>=5.3.0",
+  "pythonic-fp-singletons>=1.0.0",
 ]
 dynamic = ["description"]
 
 [project.optional-dependencies]
 test = [
   "pytest>=8.4.1",
-  "pythonic-fp.containers>=3.0.0",
+  "pythonic-fp-containers>=3.0.0",
 ]
 
 [project.urls]
