--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["flit_core>=3.12,<4"]
-build-backend = "flit_core.buildapi"
-
 [project]
 name = "pythonic-fp-fptools"
 version = "5.0.1"
@@ -20,7 +16,7 @@ keywords = [
   "non-strict",
 ]
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 3 - Alpha",
   "Framework :: Pytest",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: Apache Software License",
@@ -34,25 +30,31 @@ dependencies = [
 ]
 dynamic = ["description"]
 
-[project.optional-dependencies]
-test = [
-  "pytest>=8.4.1",
-  "pythonic-fp-containers>=3.0.0",
-]
-
 [project.urls]
 Changelog = "https://github.com/grscheller/pythonic-fp-fptools/blob/main/CHANGELOG.rst"
 Documentation = "https://grscheller.github.io/pythonic-fp/fptools/development/build/html/releases.html"
 Homepage = "https://github.com/grscheller/pythonic-fp/blob/main/README.md"
 Source = "https://github.com/grscheller/pythonic-fp-fptools"
 
+[project.optional-dependencies]
+test = [
+  "pytest>=8.4.1",
+  "pythonic-fp-containers>=3.0.0",
+]
+
+[build-system]
+requires = ["flit_core>=3.12,<4"]
+build-backend = "flit_core.buildapi"
+
 [tool.flit.module]
 name = "pythonic_fp.fptools"
 
 [tool.mypy]
-enable_incomplete_feature = ["NewGenericSyntax"]
+enable_incomplete_feature = "NewGenericSyntax"
+explicit_package_bases = true
 implicit_reexport = false
 local_partial_types = true
+namespace_packages = true
 warn_redundant_casts = true
 warn_return_any = true
 warn_unused_configs = true
@@ -60,20 +62,24 @@ warn_unused_configs = true
 [tool.pylsp-mypy]
 enabled = true
 live-mode = true
+dmypy = false
 strict = true
 report_progress = true
 
 [tool.pytest.ini_options]
+addopts = "-ra"
 consider_namespace_packages = true
 testpaths = ["tests/"]
-addopts = "-ra"
 
 [tool.ruff]
 target-version = "py313"
-ignore = ["E741"]
 
 [tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["C901"]
+"**/*.py" = ["E741"]
 
 [tool.ruff.format]
 quote-style = "single"
