--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pythonic-fp-fptools"
-version = "5.0.1"
+version = "5.1.0"
 readme = "README.rst"
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
@@ -25,8 +25,9 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "pythonic-fp-circulararray>=5.3.0",
-  "pythonic-fp-singletons>=1.0.0",
+  "pythonic-fp-booleans>=1.1.1",
+  "pythonic-fp-circulararray>=5.3.2",
+  "pythonic-fp-sentinels>=2.1.0",
 ]
 dynamic = ["description"]
 
